# practicalworks-RostislavStarikov

./: README.md
laboratory-task-1/: main.cpp
laboratory-task-12/src/main/: BUILD  main.cpp
laboratory-task-12/src/myString/: myString.cpp  myString.hpp
laboratory-task-12/src/tests/: BUILD
laboratory-task-13/src/Fraction/: Fraction.cpp  Fraction.hpp
laboratory-task-13/src/List/: BUILD  List.cpp  List.hpp
laboratory-task-13/src/Matrix/: Matrix.cpp  Matrix.hpp
laboratory-task-13/src/Product/: BUILD  Product.cpp  Product.hpp
laboratory-task-13/src/main/: BUILD  main.cpp
laboratory-task-14-2/src/Functions/: BUILD  Functions.cpp  Functions.hpp
laboratory-task-14-2/src/Student/: BUILD  Student.cpp  Student.hpp  StudentAfterFirstSession.cpp  StudentAfterFirstSession.hpp  StudentAfterSecondSession.cpp  StudentAfterSecondSession.hpp
laboratory-task-14-2/src/main/: BUILD  main.cpp
laboratory-task-2/: main1.cpp  main2.cpp  main3.cpp  main3.cpp.save
laboratory-task-3/: main.cpp
laboratory-task-4/: main.cpp
laboratory-task-5/: main.cpp
laboratory-task-6/: input.txt  main.cpp
laboratory-task-7/: main.cpp
laboratory-task-8/: main.cpp
laboratory-task-9/: main.cpp
practical-works/myString/: .bazelrc  MODULE.bazel  bazel-bazel-project  bazel-bin  bazel-myString  bazel-out  bazel-testlogs
practical-works/myString/src/fraction/: BUILD  Fraction.cpp  Fraction.hpp
practical-works/myString/src/main/: BUILD  main.cpp
practical-works/myString/src/myString/: BUILD  myString.cpp  myString.hpp
practical-works/myString/src/tests/: BUILD
(+112 files in other folders)
